# python-coding-exercise

./: pyproject.toml
src/coding_exercise/application/: splitter.py
tests/coding_exercise/application/: test_splitter.py
tests/coding_exercise/domain/model/: test_cable.py
